# Web-Socket

./: Dockerfile  README.md  index.html  main.py  pyproject.toml
storage/: data.json
