[tool.poetry]
name = "web-socket"
version = "0.1.0"
description = ""
authors = ["Kostiantyn-Liapkalo <lynx87@ukr.net>"]
readme = "README.md"
packages = [{include = "web_socket"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
